RESOLVED FIXED314895
AX: VoiceOver bounding boxes are wrong on cross-origin frames when isolated tree mode is off
https://bugs.webkit.org/show_bug.cgi?id=314895
Summary AX: VoiceOver bounding boxes are wrong on cross-origin frames when isolated t...
Tyler Wilcock
Reported 2026-05-15 09:12:14 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-15 09:12:21 PDT
Tyler Wilcock
Comment 2 2026-05-15 09:15:56 PDT
EWS
Comment 3 2026-05-15 14:23:02 PDT
Committed 313329@main (ffe69f5458b1): <https://commits.webkit.org/313329@main> Reviewed commits have been landed. Closing PR #64992 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.